--- a/Vocatis-Vorlage/printer/vorlage/PrinterTicket.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/PrinterTicket.cshtml
@@ -24,7 +24,7 @@ var appurl = new Uri(HttpContext.Current.Request.Url, apppath).AbsoluteUri;
   <h1>
     @ticket.Number
   </h1>
-  <img src="separation.png" calss="separation" alt="Trennung">
+  <img src="separation.png" class="separation" alt="Trennung">
   <section class="qrcode">
     <h4>Bitte QR Code einlesen!</h4>
     <a href="@appurl"></a>
