--- a/Vocatis-Vorlage/printer/styles/ticket.scss
+++ b/Vocatis-Vorlage/printer/styles/ticket.scss
@@ -34,7 +34,7 @@ section.ticket
     h1
     {
         text-align: center;
-        font-size: 60px;
+        font-size: 40px;
         color: #000;
         line-height: 2px;
     }
@@ -59,5 +59,6 @@ section.ticket
         height: 23mm;
         width: auto;
         float: right;
+        margin-top: 2px;
     }
 }
