--- a/Vocatis-Vorlage/printer/vorlage/AppContent.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/AppContent.cshtml
@@ -47,7 +47,7 @@ case WaitNumberState.Parked:
             <path class="cls-1" d="M23.3,23a9.15,9.15,0,0,0-5.1-7.9,8.86,8.86,0,0,0-1.7-.8h0a7.52,7.52,0,0,1-9.4,0H6.9C2.8,15.8,0,19.2,0,23V39.4H0a2.71,2.71,0,0,0,2.7,2.4,2.66,2.66,0,0,0,2.2-1.1v27A3.51,3.51,0,0,0,8.4,71h0a3.46,3.46,0,0,0,3.5-3.4V43.4H12V67.7a3.5,3.5,0,0,0,7,0V41.3l.3.1a2.66,2.66,0,0,0,1.2.3,2.64,2.64,0,0,0,2.7-2.4V35.2Z" transform="translate(1)"/>
             <text class="cls-2" text-anchor="middle" transform="translate(11.2 32.55)">989</text>
       </svg>
-    Ihre <b>voraussichtliche</b> Wartezeit betr&auml;gt <b>ca. @((int)status.EstimatedTimeOfCall.TotalMinutes) Minuten</b>.
+    Ihre <b>voraussichtliche</b> Wartezeit betr&auml;gt <b><br>ca. @((int)status.EstimatedTimeOfCall.TotalMinutes) Minuten</b>.
     <p id="three">STAND: @DateTime.Now.ToString("HH\\:mm") Uhr</p>
   </article>  
   <div class="posinfo"></div>
@@ -59,13 +59,16 @@ case WaitNumberState.Parked:
   <h5>Bitte rechtzeitig Wartebereich aufsuchen!</h5>
 </section>
   }
+
   break;
 case WaitNumberState.Called:
   var callInfo = Vocatis.GetTicketCallInfo(id);
+
 <section class="room">
   <h2>Warteschlange</h2>
   <article>
-    <p>Bitte begeben Sie sich in</p>    
+    <p>Bitte begeben Sie sich in</p>   
+    <p id="place">@callInfo.RoomName</p>
     <p id="three">STAND: @DateTime.Now.ToString("HH\\:mm") Uhr</p>     
   </article>  
   <div class="posinfo"></div>
@@ -80,9 +83,9 @@ case WaitNumberState.Called:
 case WaitNumberState.Dismissed:
 
 <section class="danke">
-  <h2>Auftrag abgeslossen</h2>
+  <h2>Bearbeitung ist abgeschlossen</h2>
   <article>
-    <p>Danke f&uuml;r den Besuch</p>  
+    <h3>Danke f&uuml;r Ihren Besuch</h3>  
     <p id="three">STAND: @DateTime.Now.ToString("HH\\:mm") Uhr</p>    
   </article>  
   <div class="posinfo"></div>
