font-size : größer
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/Vocatis-Vorlage/printer/vorlage/App.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/App.cshtml
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Vocatis</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#317EFB"/>
+  @*<meta name="viewport" content="width=device-width, initial-scale=1">*@
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0">
+  <meta name="theme-color" content="#53668D"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="@Href("app.css")" type="text/css" rel="stylesheet" />
 </head>
