--- a/Vocatis-Vorlage/printer/styles/app.scss
+++ b/Vocatis-Vorlage/printer/styles/app.scss
@@ -20,7 +20,7 @@ html, body
     background-color: $color-common-background;
     color: $color-common-foreground;
     font-size: 3vh;
-    font-family: Verdana, "Lucida Sans Unicode", sans-serif
+    font-family: Verdana, "Lucida Sans Unicode", sans-serif;
 }
 header
 {
@@ -89,6 +89,7 @@ section.logo
 
 section.main
 {
+    
         margin: 0 15vw;
         height: 60vh;
         h2 
@@ -106,16 +107,16 @@ section.main
              /* personenanzahl */
             svg
             {
-            width: 25%;
+            width: 20%;
+            max-height: 19vh;
             float: right;
             padding: 0vh 2vw;
             .cls-1{fill:$color-secondary-foreground;}
-            .cls-2{font-size:1em; fill:$color-highlight-foreground;}
+            .cls-2{font-size:1.25em; fill:$color-highlight-foreground;}
             }
-    
+
             position: absolute;
-            width: 100%;
-            font-size: 0.45rem;
+            font-size: 0.65rem;
             max-width: 65%;
             font-weight: normal;
             color:$color-secondary-foreground;
@@ -129,7 +130,8 @@ section.main
         
         #three
         {
-            padding: 15vh 0vw 1vh 0vw;   
+            padding: 12vh 0vw 1vh 0vw;
+            font-size: 0.65rem; 
         }
     
     
@@ -204,16 +206,17 @@ section.wait01
              /* personenanzahl */
             svg
             {
-            width: 25%;
+            width: 20%;
+            max-height: 19vh;
             float: right;
-            padding: 2vh 3vw;
+            padding: 0vh 3vw;
             .cls-1{fill:$color-secondary-foreground;}
-            .cls-2{font-size:1em; fill:$color-highlight-foreground;}
+            .cls-2{font-size:1.25em; fill:$color-highlight-foreground;}
             }
     
             position: absolute;
             width: 100%;
-            font-size: 0.45rem;
+            font-size: 0.65rem;
             max-width: 65%;
             font-weight: normal;
             color:$color-secondary-foreground;
@@ -227,7 +230,8 @@ section.wait01
         
         #three
         {
-            padding: 8vh 0vw 1vh 0vw;   
+            padding: 12vh 0vw 1vh 0vw;
+            font-size: 0.65rem;   
         }
     
     
@@ -291,9 +295,9 @@ section.room
     h2 
     {
         text-align: right;
-        font-size: 0.65rem;
-        line-height: 3vh;
-        padding: 3vh 3vw;
+        font-size: 0.75rem;
+        line-height: 2vh;
+        padding: 2vh 3vw;
         color: $color-primary-foreground;
         background-color: $color-primary-background;
     }
@@ -311,8 +315,9 @@ section.room
     
         position: absolute;
         width: 100%;
-        font-size: 0.45rem;
+        font-size: 0.75rem;
         max-width: 65%;
+        text-align: center;
         font-weight: normal;
         color:$color-secondary-foreground;
         padding: 0vh 3vw; 
@@ -340,7 +345,9 @@ section.room
         
     #three
     {
-        padding: 5vh 0vw 1vh 0vw;   
+        padding: 3vh 1vw 1vh 1vw;
+        font-size: 0.65rem; 
+        text-align: left;  
     }
 
     
@@ -437,7 +444,8 @@ section.danke
     
     #three
     {
-        padding: 8vh 0vw 1vh 0vw;   
+        padding: 7vh 2vw 1vh 2vw;
+        font-size: 0.65rem;     
     }
 
 
