--- a/Vocatis-Vorlage/printer/vorlage/Printer.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/Printer.cshtml
@@ -21,7 +21,7 @@
   <img src="plattformlogo_01.png" 
    class="plattformlogo" alt="plattformlogo">
  
-    <h1>Wartenummer - Ausländer</h1>
+    <h1>Wartenummer</h1>
   </header>
  
   <div class="main">
