--- a/Vocatis-Vorlage/printer/vorlage/App.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/App.cshtml
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Vocatis</title>
-  @*<meta name="viewport" content="width=device-width, initial-scale=1">*@
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0">
+  <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0">
   <meta name="theme-color" content="#53668D"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="@Href("app.css")" type="text/css" rel="stylesheet" />
@@ -21,7 +20,9 @@
 </section>
 
 <div id="content" data-content-src="@Href("AppContent.cshtml", new {id=Request["id"]})">
-  Laden ...
+  <section class="loading content">
+    Laden ...
+  </section>
 </div>
 <div id="error" style="display: none;">
  <h2>Fehler aufgetreten!</h2>
