--- a/Vocatis-Vorlage/printer/vorlage/AppContent.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/AppContent.cshtml
@@ -11,7 +11,7 @@ case WaitNumberState.Waiting:
 case WaitNumberState.Parked:
   var status = Vocatis.GetTicketWaitInfo(id);
   if (ticket.State == WaitNumberState.Waiting && status.Position < 3) {
-<section class="main">
+<section class="main content">
   <h2>Warteschlange</h2>
   <article>
     <p>Es befinden sich noch <b>@status.Position Kunden</b> vor Ihnen in der Warteschlange.</p>     
@@ -22,7 +22,7 @@ case WaitNumberState.Parked:
             <path class="cls-1" d="M23.3,23a9.15,9.15,0,0,0-5.1-7.9,8.86,8.86,0,0,0-1.7-.8h0a7.52,7.52,0,0,1-9.4,0H6.9C2.8,15.8,0,19.2,0,23V39.4H0a2.71,2.71,0,0,0,2.7,2.4,2.66,2.66,0,0,0,2.2-1.1v27A3.51,3.51,0,0,0,8.4,71h0a3.46,3.46,0,0,0,3.5-3.4V43.4H12V67.7a3.5,3.5,0,0,0,7,0V41.3l.3.1a2.66,2.66,0,0,0,1.2.3,2.64,2.64,0,0,0,2.7-2.4V35.2Z" transform="translate(1)"/>
             <text class="cls-2" text-anchor="middle" transform="translate(12.5 34)">@status.Position</text>
           </svg>
-    <b>Bitte halten Sie sich im Wartebereich auf!</b><br>
+    <p><b>Bitte halten Sie sich im Wartebereich auf!</b></p>
     <p id="three">STAND: @DateTime.Now.ToString("HH\\:mm") Uhr</p> 
   </article>
 
@@ -36,7 +36,7 @@ case WaitNumberState.Parked:
 
 } else {
 
-<section class="wait01">
+<section class="wait01 content">
   <h2>Warteschlange</h2>
   <article>
     <p>Es befinden sich noch <b>@status.Position Kunden</b> vor Ihnen in der Warteschlange.</p>
@@ -56,7 +56,7 @@ case WaitNumberState.Parked:
     <h3>Ihre Wartemarke:</h3>
     <h4>@ticket.Number</h4>
   </div>
-  <h5></h5>
+  <h5> Bitte beachten</h5>
 </section>
   }
 
@@ -64,7 +64,7 @@ case WaitNumberState.Parked:
 case WaitNumberState.Called:
   var callInfo = Vocatis.GetTicketCallInfo(id);
 
-<section class="room">
+<section class="room content">
   <h2>Warteschlange</h2>
   <article>
     <p>Bitte begeben Sie sich in</p>   
@@ -82,7 +82,7 @@ case WaitNumberState.Called:
   break;
 case WaitNumberState.Dismissed:
 
-<section class="danke">
+<section class="danke content">
   <h2>Bearbeitung ist abgeschlossen</h2>
   <article>
     <h3>Danke f&uuml;r Ihren Besuch</h3>  
